--- a/public/wp-content/themes/sage-theme/resources/assets/styles/modules/global/_mod-twocol.scss
+++ b/public/wp-content/themes/sage-theme/resources/assets/styles/modules/global/_mod-twocol.scss
@@ -6,3 +6,13 @@
   .text{
     font-size: 18px;
   }
+  .grid-col{
+    display: grid;
+ 
+}
+
+.grid-col2{
+    display: grid;
+    grid-column-gap: 30px;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+}
