--- a/public/wp-content/themes/sage-theme/resources/assets/styles/modules/_mod-banner-internal.scss
+++ b/public/wp-content/themes/sage-theme/resources/assets/styles/modules/_mod-banner-internal.scss
@@ -4,3 +4,32 @@
   }
 }
 
+/* screen 768*/
+$mobile-width: 480px; 
+$tablet-width: 768px; 
+$desktop-width: 1024px;  
+
+@mixin mobile { @media (max-width: #{$mobile-width - 1px}) {     
+  @content;   
+ } 
+}  
+
+@mixin tablet { @media (max-width: #{$desktop-width}) {       
+   @content;   
+ } 
+}  
+
+@mixin desktop {   @media (min-width: #{$desktop-width}) {     
+  @content;  
+ } 
+}
+
+.rotate{
+    @include tablet(){
+        transform: rotate(0deg);
+    }
+
+    @include desktop{
+        transform: rotate(90deg);
+    }
+}
